[Fleet] Add missing endpoint to openApi docs

--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -36,6 +36,36 @@ paths:
       operationId: setup
       parameters:
         - $ref: '#/components/parameters/kbn_xsrf'
+  /setup/preconfiguration:
+    put:
+      summary: Preconfiguration
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  policies:
+                    type: array
+                    items:
+                      type: object
+                      items:
+                        id:
+                          type: string
+                        updated_at:
+                          type: string
+                  packages:
+                    type: array
+                    items:
+                      type: string
+                  nonFatalErrors:
+                    type: array
+                    items:
+                      $ref: null
+      operationId: get-settings
   /settings:
     get:
       summary: Settings
@@ -59,6 +89,74 @@ paths:
               schema:
                 $ref: '#/components/schemas/fleet_settings_response'
       operationId: update-settings
+  /service-tokens:
+    deprecated: true
+    post:
+      summary: Generate service tokens
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+        operationId: generate-service-token
+      parameters:
+        - $ref: '#/components/parameters/kbn_xsrf'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                value:
+                  type: string
+  /service_tokens:
+    post:
+      summary: Generate service tokens
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+        operationId: generate-service-token
+      parameters:
+        - $ref: '#/components/parameters/kbn_xsrf'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                value:
+                  type: string
+  /epm/_bulk:
+    post:
+      summary: Packages - Bulk install
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                packages:
+                  type: array
+                  items:
+                    type: string
+      operationId: bulk-install-packages
+    parameters: []
   /epm/categories:
     get:
       summary: Package categories
@@ -68,22 +166,43 @@ paths:
           description: OK
           content:
             application/json:
-              schema:
-                type: array
+              type: object
+              properties:
                 items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                    title:
-                      type: string
-                    count:
-                      type: number
-                  required:
-                    - id
-                    - title
-                    - count
+                  schema:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        title:
+                          type: string
+                        count:
+                          type: number
+                      required:
+                        - id
+                        - title
+                        - count
       operationId: get-package-categories
+  /epm/packages/limited:
+    get:
+      summary: Packages - Get limited list
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              type: object
+              properties:
+                items:
+                  schema:
+                    type: array
+                    items:
+                      type: string
+      operationId: list-limited-packages
+    parameters: []
   /epm/packages:
     get:
       summary: Packages - List
@@ -93,10 +212,13 @@ paths:
           description: OK
           content:
             application/json:
-              schema:
-                type: array
+              type: object
+              properties:
                 items:
-                  $ref: '#/components/schemas/search_result'
+                  schema:
+                    type: array
+                    items:
+                      $ref: ../components/schemas/search_result.yaml
       operationId: list-all-packages
     parameters: []
   /epm/packages/{pkgkey}:
@@ -333,6 +455,65 @@ paths:
               properties:
                 force:
                   type: boolean
+  /epm/packages/{pkgName}/{pkgVersion}/{filePath*}:
+    get:
+      summary: Packages - Get file from registry
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                body:
+                  type: object
+                statusCode:
+                  type: number
+                headers:
+                  type: object
+      operationId: packages-get-file
+    parameters:
+      - schema:
+          type: string
+        name: pkgName
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: pkgVersion
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: filePath
+        in: path
+        required: true
+  /epm/packages/{pkgName}/stats:
+    get:
+      summary: Get stats for a package
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  response:
+                    $ref: '#/components/schemas/package_usage_stats'
+                required:
+                  - response
+      operationId: get-package-stats
+      security:
+        - basicAuth: []
+    parameters:
+      - schema:
+          type: string
+        name: pkgName
+        in: path
+        required: true
   /agents/setup:
     get:
       summary: Agents setup - Info
@@ -592,6 +773,47 @@ paths:
       operationId: delete-agent
       parameters:
         - $ref: '#/components/parameters/kbn_xsrf'
+  /agents/{agentId}/actions:
+    parameters:
+      - schema:
+          type: string
+        name: agentId
+        in: path
+        required: true
+    post:
+      summary: Agent - Actions
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+        operationId: new-agent-action
+      parameters:
+        - $ref: '#/components/parameters/kbn_xsrf'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: null
+            title: Agent action
+            oneOf:
+              - type: object
+                properties:
+                  enum:
+                    - POLICY_CHANGE
+                    - UNENROLL
+                    - UPGRADE
+                    - POLICY_REASSIGN
+              - type: object
+                properties:
+                  enum:
+                    - debug
+                    - info
+                    - warning
+                    - error
   /agents/{agentId}/reassign:
     parameters:
       - schema:
@@ -952,6 +1174,23 @@ paths:
                 - agentPolicyId
       parameters:
         - $ref: '#/components/parameters/kbn_xsrf'
+    parameters: []
+  /data_streams:
+    get:
+      summary: Data streams - List
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                data_streams:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/data_stream.yaml'
+      operationId: data-streams-list
     parameters: []
   /enrollment-api-keys:
     deprecated: true
@@ -1495,6 +1734,8 @@ paths:
                     type: string
                 ca_sha256:
                   type: string
+                ca_trusted_fingerprint:
+                  type: string
                 config_yaml:
                   type: string
               required:
@@ -1514,31 +1755,6 @@ paths:
                   - item
       parameters:
         - $ref: '#/components/parameters/kbn_xsrf'
-  /epm/packages/{pkgName}/stats:
-    get:
-      summary: Get stats for a package
-      tags: []
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  response:
-                    $ref: '#/components/schemas/package_usage_stats'
-                required:
-                  - response
-      operationId: get-package-stats
-      security:
-        - basicAuth: []
-    parameters:
-      - schema:
-          type: string
-        name: pkgName
-        in: path
-        required: true
 components:
   securitySchemes:
     basicAuth:
@@ -1629,40 +1845,6 @@ components:
           $ref: '#/components/schemas/settings'
       required:
         - item
-    search_result:
-      title: Search result
-      type: object
-      properties:
-        description:
-          type: string
-        download:
-          type: string
-        icons:
-          type: string
-        name:
-          type: string
-        path:
-          type: string
-        title:
-          type: string
-        type:
-          type: string
-        version:
-          type: string
-        status:
-          type: string
-        savedObject:
-          type: object
-      required:
-        - description
-        - download
-        - icons
-        - name
-        - path
-        - title
-        - type
-        - version
-        - status
     package_info:
       title: Package information
       type: object
@@ -1804,6 +1986,14 @@ components:
         - ilm_policy
         - transform
         - data_stream_ilm_policy
+    package_usage_stats:
+      title: Package usage stats
+      type: object
+      properties:
+        agent_policy_count:
+          type: integer
+      required:
+        - agent_policy_count
     fleet_status_response:
       title: Fleet status response
       type: object
@@ -2145,6 +2335,8 @@ components:
             type: string
         ca_sha256:
           type: string
+        ca_trusted_fingerprint:
+          type: string
         api_key:
           type: string
         config:
@@ -2156,13 +2348,5 @@ components:
         - is_default
         - name
         - type
-    package_usage_stats:
-      title: Package usage stats
-      type: object
-      properties:
-        agent_policy_count:
-          type: integer
-      required:
-        - agent_policy_count
 security:
   - basicAuth: []
