--- a/x-pack/plugins/fleet/common/openapi/entrypoint.yaml
+++ b/x-pack/plugins/fleet/common/openapi/entrypoint.yaml
@@ -16,18 +16,34 @@ paths:
   # plugin-wide endpoint(s)
   /setup:
     $ref: paths/setup.yaml
+  /setup/preconfiguration:
+    $ref: paths/setup_preconfiguration.yaml
   /settings:
     $ref: paths/settings.yaml
+  # App endpoints
+  /service-tokens:
+    $ref: paths/service_tokens.yaml
+    deprecated: true
+  /service_tokens:
+    $ref: paths/service_tokens.yaml
   # EPM / integrations endpoints
+  /epm/_bulk:
+    $ref: paths/epm@bulk.yaml
   /epm/categories:
     $ref: paths/epm@categories.yaml
+  /epm/packages/limited:
+    $ref: paths/epm@limited_list.yaml
   /epm/packages:
     $ref: paths/epm@packages.yaml
   '/epm/packages/{pkgkey}':
     $ref: 'paths/epm@packages@{pkgkey}.yaml'
     deprecated: true
   '/epm/packages/{pkgName}/{pkgVersion}':
-    $ref: 'paths/epm@packages@{pkg_name}@{pkg_version}.yaml'  
+    $ref: 'paths/epm@packages@{pkg_name}@{pkg_version}.yaml'
+  '/epm/packages/{pkgName}/{pkgVersion}/{filePath*}':
+    $ref: paths/epm@get_file.yaml
+  '/epm/packages/{pkgName}/stats':
+    $ref: 'paths/epm@packages@{pkg_name}@stats.yaml'
   # Agent-related endpoints
   /agents/setup:
     $ref: paths/agents@setup.yaml
@@ -42,6 +58,8 @@ paths:
     $ref: paths/agents@bulk_upgrade.yaml
   '/agents/{agentId}':
     $ref: 'paths/agents@{agent_id}.yaml'
+  '/agents/{agentId}/actions':
+    $ref: 'paths/agents@{agent_id}@actions.yaml'
   '/agents/{agentId}/reassign':
     $ref: 'paths/agents@{agent_id}@reassign.yaml'
   '/agents/{agentId}/unenroll':
@@ -52,6 +70,7 @@ paths:
     $ref: 'paths/agents@bulk_reassign.yaml'
   '/agents/bulk_unenroll':
     $ref: 'paths/agents@bulk_unenroll.yaml'
+  #  Agent policies endpoints
   /agent_policies:
     $ref: paths/agent_policies.yaml
   '/agent_policies/{agentPolicyId}':
@@ -60,16 +79,21 @@ paths:
     $ref: 'paths/agent_policies@{agent_policy_id}@copy.yaml'
   /agent_policies/delete:
     $ref: paths/agent_policies@delete.yaml
+  # Data streams endpoints
+  /data_streams:
+    $ref: paths/data_streams.yaml
+  #  Enrollment endpoints
   /enrollment-api-keys:
     $ref: paths/enrollment_api_keys.yaml
     deprecated: true
   '/enrollment-api-keys/{keyId}':
-    $ref: 'paths/enrollment_api_keys@{key_id}.yaml'  
+    $ref: 'paths/enrollment_api_keys@{key_id}.yaml'
     deprecated: true
   /enrollment_api_keys:
     $ref: paths/enrollment_api_keys.yaml
   '/enrollment_api_keys/{keyId}':
     $ref: 'paths/enrollment_api_keys@{key_id}.yaml'
+  #  Package policies endpoints
   /package_policies:
     $ref: paths/package_policies.yaml
   /package_policies/delete:
@@ -80,12 +104,11 @@ paths:
     $ref: paths/package_policies@upgrade_dryrun.yaml
   '/package_policies/{packagePolicyId}':
     $ref: 'paths/package_policies@{package_policy_id}.yaml'
+  # Outputs
   /outputs:
     $ref: paths/outputs.yaml
   /outputs/{outputId}:
     $ref: paths/outputs@{output_id}.yaml
-  '/epm/packages/{pkgName}/stats':
-    $ref: 'paths/epm@packages@{pkg_name}@stats.yaml'
 components:
   securitySchemes:
     basicAuth:
