--- a/x-pack/plugins/fleet/common/openapi/paths/epm@categories.yaml
+++ b/x-pack/plugins/fleet/common/openapi/paths/epm@categories.yaml
@@ -6,19 +6,22 @@ get:
       description: OK
       content:
         application/json:
-          schema:
-            type: array
+          type: object
+          properties:
             items:
-              type: object
-              properties:
-                id:
-                  type: string
-                title:
-                  type: string
-                count:
-                  type: number
-              required:
-                - id
-                - title
-                - count
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    title:
+                      type: string
+                    count:
+                      type: number
+                  required:
+                    - id
+                    - title
+                    - count
   operationId: get-package-categories
