--- a/x-pack/plugins/fleet/common/openapi/paths/data_streams.yaml
+++ b/x-pack/plugins/fleet/common/openapi/paths/data_streams.yaml
@@ -11,6 +11,6 @@ get:
             data_streams:
               type: array
               items:
-                $ref: '#/components/schemas/data_stream.yaml'
+                $ref: '#/components/schemas/data_stream'
   operationId: data-streams-list
 parameters: []
