--- a/x-pack/plugins/fleet/common/openapi/paths/enrollment_api_keys@{key_id}.yaml
+++ b/x-pack/plugins/fleet/common/openapi/paths/enrollment_api_keys@{key_id}.yaml
@@ -20,6 +20,7 @@ get:
             required:
               - item
   operationId: get-enrollment-api-key
+  deprecated: true
 delete:
   summary: Enrollment API Key - Delete
   tags: []
@@ -40,3 +41,4 @@ delete:
   operationId: delete-enrollment-api-key
   parameters:
     - $ref: ../components/headers/kbn_xsrf.yaml
+  deprecated: true
