--- a/x-pack/plugins/fleet/common/openapi/paths/epm@packages@{pkgkey}.yaml
+++ b/x-pack/plugins/fleet/common/openapi/paths/epm@packages@{pkgkey}.yaml
@@ -34,6 +34,7 @@ parameters:
     name: pkgkey
     in: path
     required: true
+deprecated: true
 post:
   summary: Packages - Install
   tags: []
@@ -73,6 +74,7 @@ post:
           properties:
             force:
               type: boolean
+  deprecated: true
 delete:
   summary: Packages - Delete
   tags: []
@@ -111,3 +113,4 @@ delete:
           properties:
             force:
               type: boolean
+  deprecated: true
