--- a/x-pack/plugins/fleet/common/openapi/paths/epm@get_file.yaml
+++ b/x-pack/plugins/fleet/common/openapi/paths/epm@get_file.yaml
@@ -8,12 +8,13 @@ get:
         application/json:
           schema:
             type: object
-            body:
-              type: object
-            statusCode:
-              type: number
-            headers:
-              type: object
+            properties:
+              body:
+                type: object
+              statusCode:
+                type: number
+              headers:
+                type: object
   operationId: packages-get-file
 parameters:
   - schema:
