--- a/x-pack/plugins/fleet/common/openapi/paths/agents@{agent_id}@actions.yaml
+++ b/x-pack/plugins/fleet/common/openapi/paths/agents@{agent_id}@actions.yaml
@@ -14,6 +14,15 @@ post:
         application/json:
           schema:
             type: object
+            properties:
+              body:
+                type: array
+                items:
+                  number
+              statusCode:
+                type: number
+              headers:
+                type: string
     operationId: new-agent-action
   parameters:
     - $ref: ../components/headers/kbn_xsrf.yaml
